--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,24 +4,11 @@ body {
     background-color: rgb(41, 41, 55);
 }
 
-#content {
-    
-}
-
-.title {
+header {
     display: flex;
-    justify-content: center;
-    margin-bottom: -80px;
+    flex-direction: column;
+    align-items: center;
     border-bottom: 1px solid rgb(93, 90, 87);
-}
-
-#movieContent{
-    margin: 0;
-    max-width: 1200px;
-    display: grid;
-	grid-template-columns: auto auto auto auto;
-    gap: 40px;
-    padding: 110px;
 }
 
 h1 {
@@ -37,6 +24,73 @@ h2 {
     justify-content:space-between;
     align-items: center;
     color: blanchedalmond;
+}
+
+.title {
+    display: flex;
+    justify-content: center;
+    margin-bottom: -80px;
+   
+}
+
+#message {
+    margin-top: 100px;
+    color: bisque;
+    font-size: 30px;
+}
+
+.inputText {
+    font-family: 'Quattrocento', serif;
+    font-weight: 800;
+    color: #4d4d4d;
+    width: 332px;
+    height: 60px;
+    border-radius: 15px;
+    border: 0;
+    margin-top: 30px;
+    margin-bottom: 10px;
+}
+
+.inputText placeholder {
+    margin-left: 100px;
+}
+
+.buttons {
+   display: flex;
+   flex-direction: row;
+   margin-bottom: 20px;
+
+}
+
+button {
+    font-family: 'Quattrocento', serif;
+    font-size: 20px;
+    width: 100px;
+    height: 30px;
+    margin: 8px;
+    border-radius: 15px;
+    border: 0;
+}
+
+.btnOne {
+    background-color: #A9eCA2;
+}
+
+.btnTwo {
+    background-color: #74bec1;
+}
+
+.btnThree {
+    background-color: #f67280;
+}
+
+#movieContent{
+    margin-top: -50px;
+    max-width: 100%;
+    display: grid;
+	grid-template-columns: repeat(4, 1fr);
+    gap: 40px;
+    padding: 110px;
 }
 
 #movieContent img {
