--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -34,9 +34,9 @@ h2 {
 }
 
 #message {
-    margin-top: 100px;
-    color: bisque;
-    font-size: 30px;
+    margin-top: 52px;
+    color: coral;
+    font-size: 50px;
 }
 
 .inputText {
